[package]
name = "qwit"
version = "1.2.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/Qwitqwit/qwit-cli"
documentation = "https://github.com/Qwitqwit/qwit-cli"
homepage = "https://github.com/Qwitqwit/qwit-cli"
description = "A cli to work with dsv files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive", "unstable-doc", "env"] }
clap-markdown = "0.1.3"
log = "0.4.20"
qwitlib = "0.1.2"
rand = "0.8.5"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
